--- a/pawnshop/payment.html
+++ b/pawnshop/payment.html
@@ -91,7 +91,7 @@
     </nav>
   </header>
 
-  <main class="max-w-3xl mx-auto px-4 sm:px-6 py-6 sm:py-8 pb-bottom-nav">
+  <main class="max-w-3xl mx-auto px-4 sm:px-6 py-6 sm:py-8">
     <!-- Breadcrumb -->
     <nav class="flex items-center gap-2 text-sm text-navy-500 mb-6">
       <a href="transactions.html" class="hover:text-gold-600">取引一覧</a>
