--- a/pawnshop/products.html
+++ b/pawnshop/products.html
@@ -172,7 +172,7 @@
     </nav>
   </div>
 
-  <main class="max-w-7xl mx-auto px-4 sm:px-6 py-6 sm:py-8 pb-bottom-nav">
+  <main class="max-w-7xl mx-auto px-4 sm:px-6 py-6 sm:py-8">
     <!-- Page Header -->
     <div class="flex items-center justify-between mb-8">
       <div>
@@ -448,45 +448,6 @@
       </button>
     </div>
   </main>
-
-  <!-- Bottom Navigation -->
-  <nav class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-200 md:hidden z-40 safe-bottom">
-    <div class="grid grid-cols-5 h-16">
-      <a href="dashboard.html" class="flex flex-col items-center justify-center text-navy-500 hover:text-gold-600 transition-colors">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path>
-        </svg>
-        <span class="text-xs mt-1">ホーム</span>
-      </a>
-      <a href="products.html" class="flex flex-col items-center justify-center text-gold-600 transition-colors">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4"></path>
-        </svg>
-        <span class="text-xs mt-1">商品</span>
-      </a>
-      <a href="bids.html" class="flex flex-col items-center justify-center">
-        <div class="w-12 h-12 bg-gradient-to-r from-gold-400 to-gold-600 rounded-full flex items-center justify-center -mt-4 shadow-lg">
-          <svg class="w-6 h-6 text-navy-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z"></path>
-          </svg>
-        </div>
-        <span class="text-xs mt-1 text-navy-500">入札</span>
-      </a>
-      <a href="transactions.html" class="flex flex-col items-center justify-center text-navy-500 hover:text-gold-600 transition-colors">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path>
-        </svg>
-        <span class="text-xs mt-1">取引</span>
-      </a>
-      <a href="messages.html" class="flex flex-col items-center justify-center text-navy-500 hover:text-gold-600 transition-colors relative">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z"></path>
-        </svg>
-        <span class="text-xs mt-1">メッセージ</span>
-        <span class="absolute top-0 right-4 w-4 h-4 bg-red-500 rounded-full text-xs text-white flex items-center justify-center">3</span>
-      </a>
-    </div>
-  </nav>
 
   <script>
     const mobileMenuBtn = document.getElementById('mobile-menu-btn');
